Install the language server

--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "testPathIgnorePatterns": [
       "generator-exercise/"
     ]
+  },
+  "dependencies": {
+    "typescript": "^5.2.2",
+    "typescript-language-server": "^4.0.0"
   }
 }
